--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "mupq"]
 	path = mupq
 	url = https://github.com/mupq/mupq.git
+[submodule "slothy"]
+	path = slothy
+	url = https://github.com/slothy-optimizer/slothy
