--- a/.github/workflows/ml-dsa.yml
+++ b/.github/workflows/ml-dsa.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Install dependencies
         run:  pip3 install -r requirements.txt
       - name: Test (mps2-an386)
-        run: ./test.py PLATFORM=mps2-an386 ml-dsa-44 ml-dsa-65 ml-dsa-87
+        run: ./test.py -p mps2-an386 ml-dsa-44 ml-dsa-65 ml-dsa-87
       - name: Testvectors (mps2-an386)
-        run: ./testvectors.py PLATFORM=mps2-an386 ml-dsa-44 ml-dsa-65 ml-dsa-87
+        run: ./testvectors.py -p mps2-an386 ml-dsa-44 ml-dsa-65 ml-dsa-87
