--- a/.github/workflows/ml-kem.yml
+++ b/.github/workflows/ml-kem.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Install dependencies
         run:  pip3 install -r requirements.txt
       - name: Test (mps2-an386)
-        run: ./test.py PLATFORM=mps2-an386 ml-kem-512 ml-kem-768 ml-kem-1024
+        run: ./test.py -p mps2-an386 ml-kem-512 ml-kem-768 ml-kem-1024
       - name: Testvectors (mps2-an386)
-        run: ./testvectors.py PLATFORM=mps2-an386 ml-kem-512 ml-kem-768 ml-kem-1024
+        run: ./testvectors.py -p mps2-an386 ml-kem-512 ml-kem-768 ml-kem-1024
